--- a/FantasticFizzMachine/FantasticFizzMachine/FantasticFizzMachine.csproj
+++ b/FantasticFizzMachine/FantasticFizzMachine/FantasticFizzMachine.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{659C47F8-1000-4873-AF96-C5CE6544BCA5}</ProjectGuid>
+    <ProjectGuid>{7302E4A3-44B6-4B60-8CDA-DBB4B2B58174}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BinarySearchTree</RootNamespace>
-    <AssemblyName>BinarySearchTree</AssemblyName>
+    <RootNamespace>FantasticFizzMachine</RootNamespace>
+    <AssemblyName>FantasticFizzMachine</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,10 +43,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BinarySearchTree.cs" />
-    <Compile Include="Node.cs" />
+    <Compile Include="Dime.cs" />
+    <Compile Include="GrapeSoda.cs" />
+    <Compile Include="SodaInventory.cs" />
+    <Compile Include="LemonSoda.cs" />
+    <Compile Include="Money.cs" />
+    <Compile Include="Nickel.cs" />
+    <Compile Include="OrangeSoda.cs" />
+    <Compile Include="Penny.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Quarter.cs" />
+    <Compile Include="Register.cs" />
+    <Compile Include="Soda.cs" />
+    <Compile Include="..\..\..\..\Visual Studio 2015\Projects\SodaMachine.cs">
+      <Link>SodaMachine.cs</Link>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
